--- a/style.css
+++ b/style.css
@@ -12,8 +12,7 @@
     font-size: 16px;
     font-family: futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.5;
-    --abl-line-height: $line-height-m;
-    --abl-desktop-breakpoint: 1024;
+   
     font-weight: normal;
     color: #000;
 }
@@ -34,13 +33,14 @@
     justify-content: flex-start;
 }
 
+
+
 .nav-links a {
     justify-content: flex-start;
     color: black; /* Change hyperlink color to black */
     text-decoration: none; /* Remove the underline */
     
    font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-
 }
 
 
@@ -50,36 +50,45 @@
     justify-content: flex-start; /* Aligns all links to the left */
     gap: 20px; /* Adds space between each link */
     text-align: left;
-    margin-left: 0%;
+    border-left: #ddd;
+    margin-left: 1%;
+    margin-top: 1%;
+    margin-bottom: 1%;
     font-family: futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-decoration: none;
     color: black;
+
 }
 
 .nav-about a {
-    text-decoration: none;
-    margin-left: 0%;
-    color: #000000;
+    color: black; /* Change hyperlink color to black */
+    text-decoration: none; /* Remove the underline */
     
-    font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+   font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+
  
+}
+/* Ensure all link states also inherit the black color and no underline */
+.nav-about a:link, 
+.nav-about a:visited, 
+.nav-about a:hover, 
+.nav-about a:active {
+    color: black; /* Set link color to black in all states */
+    text-decoration: none; /* Ensure no underline */
+    box-shadow: none; /* Remove any potential shadow on hover */
 }
 
 
 
 .auth-links a {
+    color: black;
     text-decoration: none;
-    gap: none;
-    margin-left: 300px;
-    color: #000000;
-    font-weight: bold;
+    font-weight: 500;
     font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+    text-align: right;
+    
  
 }
-
-
-
-
 
 .main-nav__separator{
     width: 343px;
@@ -153,11 +162,12 @@
     box-shadow: none; /* Remove any potential shadow on hover */
 }
 
-
-a [href="trial"]{
+.orange-text{
+    color: orange;
+}
+.blue-text{
     color: blue;
 }
-
 .boldBody{
     font-weight: bold;
     text-align: center;
