--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     line-height: 1.5;
    
     font-weight: normal;
-    color: #000;
+   
 }
 .nav-links {
     list-style: none;
@@ -24,7 +24,7 @@
     text-align: left;
     font-family: futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-decoration: none;
-    color: black;
+    
 }
 
 .nav-links li {
@@ -37,7 +37,7 @@
 
 .nav-links a {
     justify-content: flex-start;
-    color: black; /* Change hyperlink color to black */
+
     text-decoration: none; /* Remove the underline */
     
    font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -56,12 +56,12 @@
     margin-bottom: 1%;
     font-family: futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-decoration: none;
-    color: black;
+   
 
 }
 
 .nav-about a {
-    color: black; /* Change hyperlink color to black */
+   
     text-decoration: none; /* Remove the underline */
     
    font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -73,7 +73,7 @@
 .nav-about a:visited, 
 .nav-about a:hover, 
 .nav-about a:active {
-    color: black; /* Set link color to black in all states */
+    
     text-decoration: none; /* Ensure no underline */
     box-shadow: none; /* Remove any potential shadow on hover */
 }
@@ -81,13 +81,16 @@
 
 
 .auth-links a {
-    color: black;
+   
     text-decoration: none;
     font-weight: 500;
     font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    text-align: right;
+    
     
  
+}
+.auth-links{
+    margin-left: auto;
 }
 
 .main-nav__separator{
@@ -108,11 +111,11 @@
     margin-left: 15%;
     font-family: futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-decoration: none;
-    color: black;
+  
 }
 
 .topNav1 a {
-    color: black; /* Change hyperlink color to black */
+   
     text-decoration: none; /* Remove the underline */
     
    font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -125,7 +128,7 @@
 .topNav1 a:visited, 
 .topNav1 a:hover, 
 .topNav1 a:active {
-    color: black; /* Set link color to black in all states */
+   
     text-decoration: none; /* Ensure no underline */
     box-shadow: none; /* Remove any potential shadow on hover */
 }
@@ -140,11 +143,11 @@
     margin-left: 15%;
     font-family: futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-decoration: none;
-    color: black;
+    
 }
 
 .topNav2 a {
-    color: black; /* Change hyperlink color to black */
+    
     text-decoration: none; /* Remove the underline */
     
    font-family:futura-pt, Avenir, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -157,7 +160,7 @@
 .topNav2 a:visited, 
 .topNav2 a:hover, 
 .topNav2 a:active {
-    color: black; /* Set link color to black in all states */
+   
     text-decoration: none; /* Ensure no underline */
     box-shadow: none; /* Remove any potential shadow on hover */
 }
@@ -166,7 +169,12 @@
     color: orange;
 }
 .blue-text{
+    
     color: blue;
+    margin-right: 15px;
+}
+.blackText{
+    color:black;
 }
 .boldBody{
     font-weight: bold;
