--- a/style.css
+++ b/style.css
@@ -1,5 +1,13 @@
 /* Styling all links inside .topNav1 */
 
+.homeImage{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+
+
+}
 
 .navbar {
     display: flex;
